fixing overflow body

--- a/src/global.css
+++ b/src/global.css
@@ -9,6 +9,9 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+.App {
+  overflow: hidden;
+}
 
 * {
   padding: 0;
